--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ nbproject
 Thumbs.db
 
 # composer vendor dir
-/vendor
 !/vendor/mdmsoft/
+/vendor/*
 # composer itself is not needed
 composer.phar
 
