--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "dmstr/yii2-adminlte-asset": "^2.1",
         "mdmsoft/yii2-admin": "2.*",
         "kartik-v/yii2-widget-select2": "@dev",
-        "phpoffice/phpspreadsheet": "^1.3"
+        "phpoffice/phpspreadsheet": "^1.3",
+        "hguenot/yii2-gftp": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
