--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "mdmsoft/yii2-admin": "2.*",
         "kartik-v/yii2-widget-select2": "@dev",
         "phpoffice/phpspreadsheet": "^1.3",
-        "hguenot/yii2-gftp": "*"
+        "hguenot/yii2-gftp": "*",
+        "yiisoft/yii2-redis": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
