recommend ebay new product

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "kartik-v/yii2-widget-select2": "@dev",
         "phpoffice/phpspreadsheet": "^1.3",
         "hguenot/yii2-gftp": "*",
-        "yiisoft/yii2-redis": "^2.0"
+        "yiisoft/yii2-redis": "^2.0",
+        "yiisoft/yii2-mongodb": "^2.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
