--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
         "phpoffice/phpspreadsheet": "^1.3",
         "hguenot/yii2-gftp": "*",
         "yiisoft/yii2-redis": "^2.0",
-        "yiisoft/yii2-mongodb": "^2.1",
-        "jianyan74/yii2-websocket": "^1.1"
+        "yiisoft/yii2-mongodb": "^2.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
