--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,5 @@ Would skip repository vendor/kartik-v/yii2-widget-select2
 !/docs/
 /backend/uploads/
 /index.php
+!/backend/modules/v1/controllers/TestController.php
 
