--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "yiisoft/yii2-redis": "^2.0",
         "yiisoft/yii2-mongodb": "^2.1",
         "workerman/workerman": "^3.5",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "6.5.5",
+        "guzzlehttp/psr7": "1.6.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
